- Fixed with issues when used inside an input group - added cursor: pointer for list items - removed white-space: nowrap from .tt-suggestion so that we could have custom-styled menu items

--- a/typeahead.less
+++ b/typeahead.less
@@ -37,9 +37,11 @@
   //border
   .input-group .twitter-typeahead:first-child &{
     .border-left-radius(@border-radius-base);
+	width: 100%;
   }
   .input-group .twitter-typeahead:last-child &{
     .border-right-radius(@border-radius-base);
+	width: 100%;
   }
 
   //sizing - small:size and border
@@ -78,10 +80,10 @@
 //for wrapper
 .twitter-typeahead {
   width: 100%;
+  float: left;
   .input-group &{
     //overwrite `display:inline-block` style
     display: table-cell!important;
-    float: left;
   }
 }
 
@@ -132,10 +134,10 @@
     font-weight: normal;
     line-height: @line-height-base;
     color: @dropdown-link-color;
-    white-space: nowrap;
 
     &.tt-cursor {
       //item selected
+	  cursor: pointer;
       text-decoration: none;
       outline: 0;
       background-color: @dropdown-link-hover-bg;
